<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="8dp"
                    android:padding="8dp"
                    android:text="@string/first_name"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/add_contact_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_view_background"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:paddingEnd="1dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="1dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/subtitle_text_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="8dp"
                    android:padding="8dp"
                    android:text="@string/last_name"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/add_contact_last_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_view_background"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:paddingEnd="1dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="1dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/subtitle_text_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="8dp"
                    android:padding="8dp"
                    android:text="@string/address"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/add_address_edit"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_view_background"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:paddingEnd="1dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="1dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/subtitle_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/add_contact_add_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:text="@string/add_alternative_address"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="8dp"
                    android:padding="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray"
                    android:textSize="13sp">


                    <TextView
                        android:id="@+id/add_contact_add_dateBirth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="5dp"
                        android:text="12/sept/2017"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/ic_next" />

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="8dp"
                    android:padding="8dp"
                    android:text="@string/phone"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray"
                    android:textSize="13sp" />

                <LinearLayout
                    android:id="@+id/add_contact_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_contact_phone"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_view_background"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:paddingEnd="1dp"
                        android:paddingStart="5dp"
                        android:textColor="@color/subtitle_text_color"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/add_contact_alternative_phones_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="Alternative Phones"
                android:textAllCaps="true"
                android:textColor="@color/light_gray"
                android:textSize="13sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/add_alternative_add_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:text="@string/add_alternative_number"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="8dp"
                    android:padding="8dp"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/add_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_view_background"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingEnd="1dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="1dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/subtitle_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/add_alternative_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:text="@string/add_alternative_email"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/add_view_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/create"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>